I have Created a css file and added the header and its components

--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html>
     <head>
         <title>YouTube Homepage</title>
+        <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
     <body>
-        
+        <header>
+            <div class="navbar">
+                <div class="logo">
+                    <img class="logo-img" src="" alt="youtube_logo">
+                </div>
+                <div class="search_bar">
+                    <input type="text" name="search" placeholder="Search">
+                </div>
+                <div class="submit_button">
+                    <input type="submit" value="Sign in">
+                </div>
+
+            </div>
+        </header>
     </body>
 </html>
