youtube logo, images and avatar added and managed according to navbar, update search bar and search button

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
         <header>
             <div class="navbar">
                 <div class="logo">
-                    <img class="logo-img" src="" alt="youtube_logo">
+                    <img class="logo_image" src="images/youTubeLogo.png" alt="youtube_logo">
                 </div>
                 <div class="search_bar">
-                    <input type="text" name="search" placeholder="Search">
+                    <input type="text" name="search" class="search_tab"placeholder="Search">
+                    <img class="search_icon" style="margin: -9px -3px -9px" src="images/search.png" alt="Search">
+                    <div class="submit_button">
+                        <img class="avatar" src="images/camera.png" alt="Search">
+                        <img class="avatar" src="images/notification.png" alt="Search">
+                        <img class="avatar" src="images/userLogo.png" alt="Search">
+                        <!-- <input type="submit" value="Sign in"> -->
+                    </div>
                 </div>
-                <div class="submit_button">
-                    <input type="submit" value="Sign in">
-                </div>
+                
 
             </div>
         </header>
