Adjusted the CSS to make the Header Look the Same like mockup

--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     </head>
     <body>
         <header>
-            <div class="navbar">
-                <div class="logo">
-                    <img class="logo-img" src="" alt="youtube_logo">
-                </div>
-                <div class="search_bar">
-                    <input type="text" name="search" placeholder="Search">
-                </div>
-                <div class="submit_button">
-                    <input type="submit" value="Sign in">
-                </div>
-
-            </div>
+            
+            <nav class="clearfix">
+                <div class="logodiv">
+                    <a href=""> <img class="logo-img" src="img/youtube_logo.PNG" alt="youtube_logo"> </a>
+                   </div>
+                <form class="search_form">
+                    <input class="search" type="text" name="search" placeholder="Search">
+                    <button class="search-button" type="submit">
+                </form>
+                    <input class="sign-in" type="submit" value="Sign in">
+            </nav>
         </header>
     </body>
 </html>
