Adjusted the css on the sidebar and the video changed to iframe and also  adjust css in the comment area, I aslo added black lines to understand well the margins between or header, sections and aside

--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en-us">
     <head>
         <title>YouTube Homepage</title>
-        <meta charset="utf-8" />
-
+        <meta charset="utf-8">
         <!-- custome css file-->
-        <link rel="stylesheet" href="css/style.css" type="text/css" />
-        
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <!-- Font awesom CDN-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,8 +17,11 @@
                 <div class="navbar">
                     <div class="logo"><img class="logo_image" src="img/youTubeLogo.png" alt="youtube_logo" /></div>
                     <div class="search_bar">
-                        <input type="text" name="search" class="search_tab" placeholder="Search" /> <button class="search_button" type="submit">Search</button>
-                        <div class="submit_button"><img class="avatar" src="img/camera.png" alt="Search" /> <img class="avatar" src="img/notification.png" alt="Search" /> <img class="avatar" src="img/userLogo.png" alt="Search" /></div>
+                        <input type="text" name="search" class="search_tab" placeholder="Search" /> 
+                        <button class="search_button" type="submit">Search</button>
+                        <div class="submit_button"><img class="avatar" src="img/camera.png" alt="Search" /> 
+                            <img class="avatar" src="img/notification.png" alt="Search" /> 
+                            <img class="avatar" src="img/userLogo.png" alt="Search" /></div>
                     </div>
                 </div>
             </nav>
@@ -30,12 +31,15 @@
         <!-- SECTION STARTS HERE-->
         <section class="video-info">
             <div class="vid-info">
-                <video width="100%" height="60%" controls>
-                    <!-- media types of video-->
+               <!-- <video width="100%" height="60%" controls>
+                    <media types of video
                     <source src="video.mp4" type="video/mp4" />
                     <source src="video.ogg" type="video/ogg" />
                 </video>
-                <h2>Contributing to Open Source Project</h2>
+            -->
+            <iframe width="800" height="455" src="https://www.youtube.com/embed/uDnPxLxDsvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                <h3>Live: Rod Rosenstein Testifies Before Senate on Russia Investigation | NBC News</h3>
                 <p>
                     5.1K <strong>Views</strong> ● June 02, 2020
                     <span>
@@ -48,20 +52,17 @@
                 <div class="subscribe">
                     <h3><i class="fa fa-user"></i> The Odin Project</h3>
                     <span>
-                        <button>Subscribe</button>
+                        <button class="subscribenow">Subscribe</button>
                         <button>799</button>
                     </span>
                 </div>
-
-                <ul>
-                    <li><a href="#">Add to</a></li>
-                    <li><a href="#">Share</a></li>
-                    <li><a href="#">More</a></li>
-                </ul>
-                <ul>
-                    <li>359</li>
-                    <li>19</li>
-                </ul>
+                <p>
+                    Etiam. Interdum commodo. Eros, vulputate eleifend magnis ridiculus hendrerit non. Laoreet 
+                    sodales justo ut dis habitant pede.Malesuada sodales. Ridiculus quisque, sociis odio quam 
+                    ornare in taciti condimentum semper curae; etiam. Turpis cum magna per Integer rhoncus tempus 
+                    morbi, nisi vel Torquent arcu posuere dictum primis primis, fames montes libero tellus neque nostra 
+                    ligula urna facilisis bibendum pulvinar phasellus, montes.
+                </p>
             </div>
             <!-- COMMENTS GOES HERE-->
             <div class="description_comment"></div>
@@ -74,35 +75,35 @@
             <article>
                 <a href="#"><img class="sidebar" src="img/laptop-mockup.jpg" alt="Laptop Mockup" width="150px" height="100" /> </a>
                 <div>
-                    <h4>Description of video</h4>
+                    <p class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </p>
                     <p>2k Views ● 2 week ago</p>
                 </div>
             </article>
             <article>
                 <a href=""> <img class="sidebar" src="img/officeWork.jpg" alt="Office Work" width="150px" height="100" /></a>
                 <div>
-                    <h4>Description of video</h4>
+                    <p class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </p>
                     <p>2k Views ● 2 week ago</p>
                 </div>
             </article>
             <article>
                 <a href=""> <img class="sidebar" src="img/officeWork.jpg" alt="Office Work" width="150px" height="100" /></a>
                 <div>
-                    <h4>Description of video</h4>
+                    <p class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </p>
                     <p>2k Views ● 2 week ago</p>
                 </div>
             </article>
             <article>
                 <a href=""> <img class="sidebar" src="img/officeWork.jpg" alt="Office Work" width="150px" height="100" /></a>
                 <div>
-                    <h4>Description of video</h4>
+                    <p class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </p>
                     <p>2k Views ● 2 week ago</p>
                 </div>
             </article>
             <article>
                 <a href=""> <img class="sidebar" src="img/officeWork.jpg" alt="Office Work" width="150px" height="100" /></a>
                 <div>
-                    <h4>Description of video</h4>
+                    <p class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </p>
                     <p>2k Views ● 2 week ago</p>
                 </div>
             </article>
