update video section design, like, unlike, share, profile picture heading managed using positions of css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- HEADER SECTION END HERE-->
 
         <!-- SECTION STARTS HERE-->
-        <section class="video-info">
+        <section>
             <div class="vid-info">
                <!-- <video width="100%" height="60%" controls>
                     <media types of video
@@ -37,26 +37,30 @@
                     <source src="video.ogg" type="video/ogg" />
                 </video>
             -->
-            <iframe width="800" height="455" src="https://www.youtube.com/embed/uDnPxLxDsvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/uDnPxLxDsvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 <h3>Live: Rod Rosenstein Testifies Before Senate on Russia Investigation | NBC News</h3>
+
                 <p>
-                    5.1K <strong>Views</strong> ● June 02, 2020
-                    <span>
+                    <span class="left">5.1K <strong>Views</strong> ● June 02, 2020</span>
+                    <span class="right">
                         <i class="fa fa-thumbs-up">3.2M</i>
                         <i class="fa fa-thumbs-down">2K</i>
                         <i class="fa fa-share">9.5K</i>
                     </span>
                 </p>
-                <hr>
+               <br> <hr>
                 <div class="subscribe">
-                    <h3><i class="fa fa-user"></i> The Odin Project</h3>
-                    <span>
+                    
+                    <span class="left">
+                        <img src="img/dp.jpg" alt="Profile Picture" /> <h3>The Odin Project</h3>
+                    </span>
+                    <span class="right">
                         <button class="subscribenow">Subscribe</button>
                         <button>799</button>
                     </span>
-                </div>
-                <p>
+                </div><br><br><br>
+                <p style="position: none;">
                     Etiam. Interdum commodo. Eros, vulputate eleifend magnis ridiculus hendrerit non. Laoreet 
                     sodales justo ut dis habitant pede.Malesuada sodales. Ridiculus quisque, sociis odio quam 
                     ornare in taciti condimentum semper curae; etiam. Turpis cum magna per Integer rhoncus tempus 
