Validated the html and added styling to the comment and links

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <header>
             <nav>
                 <div class="navbar">
-                    <div class="logo"><img class="logo_image" src="img/youTubeLogo.png" alt="youtube_logo" /></div>
+                    <div class="logo"><a href="#"><img class="logo_image" src="img/youTubeLogo.png" alt="youtube_logo" /></a></div>
                     <div class="search_bar">
                         <input type="text" name="search" class="search_tab" placeholder="Search" /> 
                         <button class="search_button" type="submit">Search</button>
-                        <div class="submit_button"><img class="avatar" src="img/camera.png" alt="Search" /> 
+                        <div class="submit_button">
+                            <img class="avatar" src="img/camera.png" alt="Search" /> 
                             <img class="avatar" src="img/notification.png" alt="Search" /> 
                             <img class="avatar" src="img/userLogo.png" alt="Search" /></div>
                     </div>
@@ -31,18 +32,12 @@
         <!-- SECTION STARTS HERE-->
         <section>
             <div class="vid-info">
-               <!-- <video width="100%" height="60%" controls>
-                    <media types of video
-                    <source src="video.mp4" type="video/mp4" />
-                    <source src="video.ogg" type="video/ogg" />
-                </video>
-            -->
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/uDnPxLxDsvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/uDnPxLxDsvA"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                 <h3>Live: Rod Rosenstein Testifies Before Senate on Russia Investigation | NBC News</h3>
 
                 <p>
-                    <span class="left">5.1K <strong>Views</strong> ● June 02, 2020</span>
+                    <span class="left">5.1K  &nbsp;<strong>Views</strong> ● June 02, 2020</span>
                     <span class="right">
                         <i class="fa fa-thumbs-up">3.2M</i>
                         <i class="fa fa-thumbs-down">2K</i>
@@ -53,14 +48,15 @@
                 <div class="subscribe">
                     
                     <span class="left">
-                        <img src="img/dp.jpg" alt="Profile Picture" /> <h3>The Odin Project</h3>
+                        <img src="img/dp.jpg" alt="Profile Picture" /> 
                     </span>
+                    <h3 class="left titlepro">The Odin Project</h3>
                     <span class="right">
                         <button class="subscribenow">Subscribe</button>
                         <button>799</button>
                     </span>
                 </div><br><br><br>
-                <p style="position: none;">
+                <p class="comment">
                     Etiam. Interdum commodo. Eros, vulputate eleifend magnis ridiculus hendrerit non. Laoreet 
                     sodales justo ut dis habitant pede.Malesuada sodales. Ridiculus quisque, sociis odio quam 
                     ornare in taciti condimentum semper curae; etiam. Turpis cum magna per Integer rhoncus tempus 
@@ -77,37 +73,86 @@
         <!-- SIDE BAR STARTS HERE-->
         <aside>
             <article>
-                <a href="#"><img class="sidebar" src="img/laptop-mockup.jpg" alt="Laptop Mockup" width="150px" height="100" /> </a>
+                <a href="#"><img class="sidebar-img" src="img/laptop-mockup.jpg" alt="Laptop Mockup" /> </a>
                 <div>
-                    <p class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </p>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
                     <p>2k Views ● 2 week ago</p>
                 </div>
             </article>
             <article>
-                <a href=""> <img class="sidebar" src="img/officeWork.jpg" alt="Office Work" width="150px" height="100" /></a>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work" /></a>
                 <div>
-                    <p class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </p>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
                     <p>2k Views ● 2 week ago</p>
                 </div>
             </article>
             <article>
-                <a href=""> <img class="sidebar" src="img/officeWork.jpg" alt="Office Work" width="150px" height="100" /></a>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work"/></a>
                 <div>
-                    <p class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </p>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
                     <p>2k Views ● 2 week ago</p>
                 </div>
             </article>
             <article>
-                <a href=""> <img class="sidebar" src="img/officeWork.jpg" alt="Office Work" width="150px" height="100" /></a>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work"/></a>
                 <div>
-                    <p class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </p>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
                     <p>2k Views ● 2 week ago</p>
                 </div>
             </article>
             <article>
-                <a href=""> <img class="sidebar" src="img/officeWork.jpg" alt="Office Work" width="150px" height="100" /></a>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work"/></a>
                 <div>
-                    <p class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </p>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
+                    <p>2k Views ● 2 week ago</p>
+                </div>
+            </article>
+            <article>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work"/></a>
+                <div>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
+                    <p>2k Views ● 2 week ago</p>
+                </div>
+            </article>
+            <article>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work"/></a>
+                <div>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
+                    <p>2k Views ● 2 week ago</p>
+                </div>
+            </article>
+            <article>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work"/></a>
+                <div>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
+                    <p>2k Views ● 2 week ago</p>
+                </div>
+            </article>
+            <article>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work"/></a>
+                <div>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
+                    <p>2k Views ● 2 week ago</p>
+                </div>
+            </article>
+            <article>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work"/></a>
+                <div>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
+                    <p>2k Views ● 2 week ago</p>
+                </div>
+            </article>
+            <article>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work"/></a>
+                <div>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
+                    <p>2k Views ● 2 week ago</p>
+                </div>
+            </article>
+            <article>
+                <a href=""> <img class="sidebar-img" src="img/officeWork.jpg" alt="Office Work"/></a>
+                <div>
+                    <h3 class="sidebar-para"><a class="side-anchor" href=""><b>Interdum commodo. Eros, vulputate eleifend magn</b></a> </h3>
                     <p>2k Views ● 2 week ago</p>
                 </div>
             </article>
