Style the font and added comment to the css and also cleaned our code

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                     <span class="left">
                         <img src="img/dp.jpg" alt="Profile Picture" /> 
                     </span>
-                    <h3 class="left titlepro">The Odin Project</h3>
+                    <h3 class="left">The Odin Project</h3>
                     <span class="right">
                         <button class="subscribenow">Subscribe</button>
                         <button>799</button>
                     </span>
                 </div><br><br><br>
-                <p class="comment">
+                <p class="description">
                     Etiam. Interdum commodo. Eros, vulputate eleifend magnis ridiculus hendrerit non. Laoreet 
                     sodales justo ut dis habitant pede.Malesuada sodales. Ridiculus quisque, sociis odio quam 
                     ornare in taciti condimentum semper curae; etiam. Turpis cum magna per Integer rhoncus tempus 
