Changed the top bar icons and adjusted css to well place them

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
         <header>
             <nav>
                 <div class="navbar">
-                    <div class="logo"><a href="#"><img class="logo_image" src="img/youTubeLogo.png" alt="youtube_logo" /></a></div>
+                    <div class="logo"><a href="#">
+                        <a href="#"><img class="more" src="img/more.PNG" alt="youtube_logo" /></a>
+                        <img class="logo_image" src="img/youtube_logo.PNG" alt="youtube_logo" /></a>
+                    </div>
                     <div class="search_bar">
                         <input type="text" name="search" class="search_tab" placeholder="Search" /> 
                         <button class="search_button" type="submit">Search</button>
                         <div class="submit_button">
-                            <img class="avatar" src="img/camera.png" alt="Search" /> 
-                            <i class="fa fa-bell" aria-hidden="true"></i>
-                            <i class="fa fa-user"></i>
-                           
-                            <!-- <img class="avatar" src="img/notification.png" alt="Search" />  -->
-                            <!-- <img class="avatar" src="img/userLogo.png" alt="Search" /></div> -->
+                            <img class="avatar" src="img/camera1.png" alt="Search" />
+                            <img class="avatar" src="img/moreapps.PNG" alt="Search" />
+                            <img class="avatar" src="img/notification1.png" alt="Notification"/> 
+                            <i class="fa fa-user  user-icon_1"></i> 
                     </div>
                 </div>
             </nav>
