make navigation bar responsive, add the favicon, update the one more media query for video and side bar, minor updates

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- Font awesom CDN-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16">
+        <link rel="icon" href="img/favicon.jpeg" type="image/gif" sizes="16x16">
     </head>
     <body>
         <!-- HEADER STARTS HERE-->
@@ -17,16 +17,17 @@
                 <div class="navbar">
                     <div class="logo"><a href="#">
                         <a href="#"><img class="more" src="img/more.PNG" alt="youtube_logo" /></a>
-                        <img class="logo_image" src="img/youtube_logo.PNG" alt="youtube_logo" /></a>
+                        <img class="logo_image" src="img/youTubeLogo.png" alt="youtube_logo" />
                     </div>
                     <div class="search_bar">
                         <input type="text" name="search" class="search_tab" placeholder="Search" /> 
                         <button class="search_button" type="submit">Search</button>
                         <div class="submit_button">
-                            <img class="avatar" src="img/camera1.png" alt="Search" />
+                            <img class="avatar search_img" src="img/search.png" alt="Search" />
+                            <img class="avatar" src="img/camera.png" alt="Search" />
                             <img class="avatar" src="img/moreapps.PNG" alt="Search" />
                             <img class="avatar" src="img/notification1.png" alt="Notification"/> 
-                            <i class="fa fa-user  user-icon_1"></i> 
+                            <img class="avatar" src="img/profile.png" alt="profile" />
                     </div>
                 </div>
             </nav>
@@ -36,12 +37,12 @@
         <!-- SECTION STARTS HERE-->
         <section>
             <div class="vid-info">
-            <iframe src="https://www.youtube.com/embed/uDnPxLxDsvA"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <iframe src="https://www.youtube.com/embed/uDnPxLxDsvA"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 
                 <h3>Live: Rod Rosenstein Testifies Before Senate on Russia Investigation | NBC News</h3>
 
                 <p>
-                    <span class="left">5.1K  &nbsp;<strong>Views</strong> ● June 02, 2020</span>
+                    <span class="left">5.1K  &nbsp;<strong>Views</strong> <span class="hide_date">● June 02, 2020</span></span>
                     <span class="right">
                         <i class="fa fa-thumbs-up">3.2M</i>
                         <i class="fa fa-thumbs-down">2K</i>
@@ -57,7 +58,7 @@
                     <h3 class="left titlepro">The Odin Project</h3>
                     <span class="right">
                         <button class="subscribenow">Subscribe</button>
-                        <button>799</button>
+                        <button class="hide_date">799</button>
                     </span>
                 </div><br><br><br>
                 <p class="comment">
