Project completed for submission

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <div class="navbar">
-                    <div class="logo"><a href="#">
+                    <div class="logo">
                         <a href="#"><img class="more" src="img/more.PNG" alt="youtube_logo" /></a>
                         <img class="logo_image" src="img/youTubeLogo.png" alt="youtube_logo" />
                     </div>
@@ -28,6 +28,7 @@
                             <img class="avatar" src="img/moreapps.PNG" alt="Search" />
                             <img class="avatar" src="img/notification1.png" alt="Notification"/> 
                             <img class="avatar" src="img/profile.png" alt="profile" />
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -37,10 +38,8 @@
         <!-- SECTION STARTS HERE-->
         <section>
             <div class="vid-info">
-            <!-- <iframe src="https://www.youtube.com/embed/uDnPxLxDsvA"  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-
-                <h3>Live: Rod Rosenstein Testifies Before Senate on Russia Investigation | NBC News</h3>
-
+            <iframe src="https://www.youtube.com/embed/uDnPxLxDsvA"></iframe>                
+            <h3>Live: Rod Rosenstein Testifies Before Senate on Russia Investigation | NBC News</h3>
                 <p>
                     <span class="left">5.1K  &nbsp;<strong>Views</strong> <span class="hide_date">● June 02, 2020</span></span>
                     <span class="right">
