images folder updated

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <img class="avatar search_img" src="img/search.png" alt="Search" />
                             <img class="avatar" src="img/camera.png" alt="Search" />
                             <img class="avatar" src="img/moreapps.PNG" alt="Search" />
-                            <img class="avatar" src="img/notification1.png" alt="Notification"/> 
+                            <img class="avatar" src="img/notification.png" alt="Notification"/> 
                             <img class="avatar" src="img/profile.png" alt="profile" />
                         </div>
                     </div>
@@ -52,7 +52,7 @@
                 <div class="subscribe">
                     
                     <span class="left">
-                        <img src="img/dp.jpg" alt="Profile Picture" /> 
+                        <img src="img/display_picture.jpg" alt="Profile Picture" /> 
                     </span>
                     <h3 class="left titlepro">The Odin Project</h3>
                     <span class="right">
