changes required: subscribe button is updated, update the subscribe button, update:update readme file in branch

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </span>
                     <h3 class="left titlepro">The Odin Project</h3>
                     <span class="right">
-                        <button class="subscribenow">Subscribe</button>
+                        <button class="subscribenow" type="button">Subscribe</button>
                         <button class="hide_date">799</button>
                     </span>
                 </div><br><br><br>
